Change |#if defined| to |#if BUILDFLAG| in privet_notifications.cc

Per https://codereview.chromium.org/2460653003/ ENABLE_MDSN has been migrated
from a #define to a buildflag; however, there are two instances of it in
PrivetNotificationService that have not been changed yet.  This CL fixes those.

Bug: 863508
Change-Id: I273afb99ced733012ce58dcfa061d18faa8508de
Reviewed-on: https://chromium-review.googlesource.com/1136864
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Lily Houghton <lilyhoughton@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575060}